Fixed banner title on mobile

--- a/src/assets/styles/components/_banner.scss
+++ b/src/assets/styles/components/_banner.scss
@@ -24,6 +24,7 @@
   }
 
   @media only screen and (max-width: ($size-main-width - 1)) {
+    display: flex;
     height: 270px;
     overflow: hidden;
 
@@ -34,7 +35,9 @@
     .banner-title {
       left: 0;
       padding: 20px;
+      position: relative;
       top: 90px;
+      width: 100%;
     }
 
     .banner-img {
